[package]
name = "nutek-encode"
version = "0.1.0"
edition = "2024"
authors = ["Nutek Security <neosb@nuteksecurity.com"]
repository = "https://github.com/nuteksecurity/nutek-encode"
description = "A collection of encoding and hashing utilities"
license = "MIT"
keywords = ["encoding", "hashing", "hex", "percent-encoding", "html-escaping"]
readme = "README.md"


[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
base64 = "0.22.1"
percent-encoding = "2.3.1"
htmlescape = "0.3.1"
sha2 = "0.10.8"
sha1 = "0.10.6"
hex = "0.4.3"
md5 = "0.7.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
clap-stdin = "0.6.0"
tempfile = "3.19.1"

[[bin]]
name = "nutek-encode"
path = "src/main.rs"

[lib]
name = "nutek_encode_lib"
path = "src/lib.rs"

# Specify the benchmark
[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark/main.rs"

[[test]]
name = "test"
path = "tests/test.rs"
